# quantlab

./: pyproject.toml
quantlab.egg-info/: PKG-INFO  SOURCES.txt
quantlab/algorithms/: brainrot.py  meanreversion.py  momentum.py  volatilitytrend.py
quantlab/data/: tickers.py  yf.py
research/: downloadingdata.ipynb  meanreversion.ipynb  momentum.ipynb  volatilitytrend.ipynb
