[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Quantitative research and backtesting lab"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["quantlab*"]